#509 - Refactored the usage of deprecated methods.